testing csv loader